[build-system]
requires = ["setuptools >= 67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["sdh.crossgrid"]

[project]
name = "sdh.cross-grid"
description = "Cross-grid report engine"
version = "1.1.0"
dependencies = [
]
requires-python = ">= 3.8"
license = {file = 'LICENSE'}

authors = [
    {name = "Viacheslav Vic Bukhantsov", email = "vic.bukhantsov@gmail.com"},
]

maintainers = [
  {name = "Viacheslav Vic Bukhantsov", email = "vic.bukhantsov@gmail.com"}
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Repository = "https://github.com/sdh-global/sdh-crossgrid"
